# sysadmin-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUMMARY.md  UV_INSTALL.md  demo.sh  install-uv.sh  install.sh  package-sysadmin-ai.py  pyproject.toml  setup-alias.sh  sysadmin_ai.py
