[project]
name = "sysadmin-ai"
version = "1.0.1"
description = "A powerful command-line tool that enables Unix/Linux system administration through natural language commands, powered by Claude AI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Lukman Ramsey"}
]
keywords = ["ai", "sysadmin", "cli", "automation", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "cryptography>=41.0.0",
]

[project.scripts]
sysadmin-ai = "sysadmin_ai:main"
ai = "sysadmin_ai:main"

[project.urls]
Homepage = "https://github.com/lukmanr/sysadmin-ai"
Repository = "https://github.com/lukmanr/sysadmin-ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sysadmin_ai.py"]

[tool.hatch.build.targets.sdist]
include = [
    "sysadmin_ai.py",
    "requirements.txt",
    "README.md",
    "install.sh",
    "install-uv.sh",
    "setup-alias.sh",
    "demo.sh",
]
